Ignore system bootstrap checks in Elasticsearch.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   # Elasticsearch cluster
   elasticsearch:
     image: elasticsearch:5.0.0
-    command: -E node.name="es1" -E discovery.zen.ping.unicast.hosts="elasticsearch2:9301"
+    command: -E node.name="es1" -E discovery.zen.ping.unicast.hosts="elasticsearch2:9301" -E bootstrap.ignore_system_bootstrap_checks=true
     environment:
       ES_JAVA_OPTS: -Xms750m -Xmx750m
     ports:
@@ -23,7 +23,7 @@ services:
 
   elasticsearch2:
     image: elasticsearch:5.0.0
-    command: -E node.name="es2" -E discovery.zen.ping.unicast.hosts="elasticsearch:9300"
+    command: -E node.name="es2" -E discovery.zen.ping.unicast.hosts="elasticsearch:9300" -E bootstrap.ignore_system_bootstrap_checks=true
     environment:
       ES_JAVA_OPTS: -Xms750m -Xmx750m
     ports:
