Added example of usage of the image from the public registry in build-compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
   # Cerebro Elasticsearch client
   cerebro:
     build: .
+
+    # Instead of building the image locally,  can use:
+    # image: yannart/cerebro:0.4.2
+
     ports:
       - "9000:9000"
     networks:
