--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   # Elasticsearch cluster
   elasticsearch:
-    image: elasticsearch:5.1.1
+    image: elasticsearch:5-alpine
     command: -E node.name="es1" -E discovery.zen.ping.unicast.hosts="elasticsearch2:9300"
     environment:
       ES_JAVA_OPTS: -Xms750m -Xmx750m
@@ -26,7 +26,7 @@ services:
       - app_net
 
   elasticsearch2:
-    image: elasticsearch:5.1.1
+    image: elasticsearch:5-alpine
     command: -E node.name="es2" -E discovery.zen.ping.unicast.hosts="elasticsearch:9300"
     environment:
       ES_JAVA_OPTS: -Xms750m -Xmx750m
