--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,17 @@ services:
 
   # Elasticsearch cluster
   elasticsearch:
-    image: elasticsearch:5.3-alpine
-    command: -E node.name="es1" -E discovery.zen.ping.unicast.hosts="elasticsearch2:9300" -E transport.host="0.0.0.0" -E discovery.zen.minimum_master_nodes=1
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.5.1
     environment:
-      ES_JAVA_OPTS: -Xms750m -Xmx750m
+      - cluster.name=es-cluster
+      - node.name=es1
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    mem_limit: 1g
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -26,10 +33,18 @@ services:
       - app_net
 
   elasticsearch2:
-    image: elasticsearch:5.3-alpine
-    command: -E node.name="es2" -E discovery.zen.ping.unicast.hosts="elasticsearch:9300" -E transport.host="0.0.0.0" -E discovery.zen.minimum_master_nodes=1
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.5.1
     environment:
-      ES_JAVA_OPTS: -Xms750m -Xmx750m
+      - cluster.name=es-cluster
+      - node.name=es2
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "discovery.zen.ping.unicast.hosts=elasticsearch"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    mem_limit: 1g
     ports:
       - "9201:9200"
       - "9301:9300"
